# Nut_SQPnP

./: CMakeLists.txt  README.md
resources/: 3D_points.data  camera_positions.txt
src/: CMakeLists.txt  PnP.cpp  PnP_video.cpp  create_marker.cpp  plot_camera_positions.py  pnp_solver.cpp  read_markers.cpp  test.cpp  test_from_web.py
